update build.gradle script; support jpackage